# aquila-qboxero-connector

./: .gitignore  Dockerfile  README.md  pyproject.toml  replit.md  start.sh
app/: config.py  main.py
app/bq/: client.py  loader.py  schema.py
app/connectors/: qbo.py  xero.py
app/db/: db.py  models.py
app/transform/: flatten.py
client/src/: App.tsx  index.css
client/src/lib/: theme-provider.tsx
client/src/pages/: dashboard.tsx
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
